--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,18 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+.editorconfig
+angular.json
+LICENSE
+nsconfig.json
+package.json
+package-lock.json
+README.md
+tsconfig.json
+tsconfig.tns.json
+tsfmt.json
+webpack.config.js
+App_Resources
+hooks
+node_modules
+platforms
